# Expenditures_analysis

./: analyze.py  example_config.yml  example_year_2022.csv  loading.py  plotter.py  plotting.py  processing.py  pyproject.toml  readme.md  utils.py  visualize_expenses.py
configs/: example_config.yml
test/unit/: test_loading.py
visualizer/: const.py  loading.py  processing.py  visualize.py
