[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "Expenditures_visualization"
description = "Expenditures visualization"
version = "0.0.1"
readme = "README.md"
authors = []
requires-python = ">=3.8"
keywords = []
dependencies = [
    "pathlib==1.0.1",
    "pandas==1.4.0",
    "matplotlib==3.5.2",
    "numpy==1.22.1",
    "PyYAML==6.0"
]

[project.scripts]
visualize = "visualizer.visualize:main"

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "visualizer*",
]
namespaces = false